# cargo-prompt

./: Cargo.toml  LICENSE  README.md
src/: main.rs
