[package]
name = "cargo-prompt"
version = "0.1.0"
edition = "2021"
description = "Collapse a rust project into a single minified markdown file for prompting"
authors = ["Timothy Schmidt <timschmidt@gmail.com>",]
license = "MIT"
repository = "https://github.com/timschmidt/cargo-prompt"
readme = "readme.md"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
rustminify = "0.2.0"
syn = { version = "1.0", features = ["parsing", "full"] }
walkdir = "2.5.0"
