[package]
name = "cargo-prompt"
version = "0.1.7"
edition = "2024"
description = "Recursively minify and concatenate source code into a markdown document for llm prompting"
authors = ["Timothy Schmidt <timschmidt@gmail.com>",]
license = "MIT"
repository = "https://github.com/timschmidt/cargo-prompt"
readme = "README.md"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
ignore = "0.4.23"
minify-js = "0.6.0"
rustminify = "0.2.0"
syn = { version = "1.0", features = ["parsing", "full"] }
toml = "0.8.20"
